@@ -47,6 +47,8 @@ extern char FileBoxPath[256];
 
 extern unsigned char MsgBox(char* line1, char* line2, char* line3, unsigned int pen,
                             unsigned char type, char* icon, void* modalWin);
+extern signed char InputBox(char* title, char* line1, char* line2, char* buffer,
+                            unsigned short buflen, void* modalWin);
 extern unsigned char FileBox(char* path, char* filter, unsigned char flags, unsigned char attribs,
                              unsigned short entries, unsigned short bufsize, void* modalWin);
 extern void Menu_Context(unsigned char bank, void* addr, int x, int y);
